--- a/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/Properties/Resources.resx
+++ b/150505/WindowsFormsForecastLactalis/WindowsFormsForecastLactalis/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="lactalis" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lactalis.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RESUND~1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RESUND~1.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
